--- a/services.html
+++ b/services.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - TDR Consulting</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="services.css">
     <link rel="icon" href="img/logo.jpg" type="image/x-icon">
+
 
 </head>
 
@@ -17,9 +22,10 @@
         <div class="top-bar">
             <span class="fw-medium">Bienvenue aux services de consultation du TDR Sarl</span>
 
-             <div class="top-bar-icons">
+            <div class="top-bar-icons">
                 <a href="mailto:cabinet.tdr.consulting@gmail.com"><i class="bi bi-envelope-at-fill"></i></a>
-               <a href="https://www.facebook.com/share/wyy9BJZTiQ34b3Mn/?mibextid=qi2Omg"><i class="bi bi-facebook"></i> </a> 
+                <a href="https://www.facebook.com/share/wyy9BJZTiQ34b3Mn/?mibextid=qi2Omg"><i
+                        class="bi bi-facebook"></i> </a>
                 <a href="https://www.linkedin.com/company/tdr-consuling-sarl/"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
@@ -70,7 +76,7 @@
             </div>
             <div class="row">
                 <!-- Service 1 -->
-                <div class="col-lg-4 col-md-6 services-card">
+                <div class="col-lg-4 col-md-6 services-card service-item">
                     <div class="card h-100">
                         <img src="img/service1.jpg" class="card-img-top" alt="Service1">
                         <div class="card-body">
@@ -82,7 +88,7 @@
                     </div>
                 </div>
                 <!-- Service 2 -->
-                <div class="col-lg-4 col-md-6 services-card">
+                <div class="col-lg-4 col-md-6 services-card service-item">
                     <div class="card h-100">
                         <img src="img/service2.jpg" class="card-img-top" alt="Service2">
                         <div class="card-body">
@@ -94,7 +100,7 @@
                     </div>
                 </div>
                 <!-- Service 3 -->
-                <div class="col-lg-4 col-md-6 services-card">
+                <div class="col-lg-4 col-md-6 services-card service-item">
                     <div class="card h-100">
                         <img src="img/service3.jpg" class="card-img-top" alt="Service3">
                         <div class="card-body">
@@ -107,7 +113,7 @@
                     </div>
                 </div>
                 <!-- Service 4 -->
-                <div class="col-lg-4 col-md-6 services-card">
+                <div class="col-lg-4 col-md-6 services-card service-item">
                     <div class="card h-100">
                         <img src="img/service4.jpg" class="card-img-top" alt="Service4">
                         <div class="card-body">
@@ -120,7 +126,7 @@
                     </div>
                 </div>
                 <!-- Service 5 -->
-                <div class="col-lg-4 col-md-6 services-card">
+                <div class="col-lg-4 col-md-6 services-card service-item">
                     <div class="card h-100">
                         <img src="img/service5.jpg" class="card-img-top" alt="Service5">
                         <div class="card-body">
@@ -134,7 +140,7 @@
                     </div>
                 </div>
                 <!-- Service 6 -->
-                <div class="col-lg-4 col-md-6 services-card">
+                <div class="col-lg-4 col-md-6 services-card service-item">
                     <div class="card h-100">
                         <img src="img/service6.jpg" class="card-img-top" alt="Service6">
                         <div class="card-body">
@@ -331,7 +337,7 @@
     </footer>
 
     <!-- Script links -->
-    <script src="js/all.js"></script>
+    <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
