--- a/contactform.html
+++ b/contactform.html
@@ -105,27 +105,31 @@
         </div>
       </div>
     </div>
+  </div>
 
-
-    <footer class="footer mt-5">
+  <!-- Footer -->
+  <footer class="footer bg-dark text-white text-center py-3">
+    <div class="container">
       <p>&copy; 2024 TDR Consulting Sarl. All rights reserved.</p>
-    </footer>
+    </div>
+  </footer>
 
-    <!-- Bootstrap Bundle JS -->
+  <!-- Bootstrap Bundle JS -->
 
-    <script>
-      var map = L.map('map').setView([3.8495252, 11.4831218], 13);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-      }).addTo(map);
-      L.marker([3.8495252, 11.4831218]).addTo(map)
-        .bindPopup('TDR Consulting <br> Sarl/IFCE.')
-        .openPopup();
-    </script>
+  <script>
+    var map = L.map('map').setView([3.8495252, 11.4831218], 13);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+    L.marker([3.8495252, 11.4831218]).addTo(map)
+      .bindPopup('TDR Consulting <br> Sarl/IFCE.')
+      .openPopup();
+  </script>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
 </body>
 
 </html>
