--- a/services.html
+++ b/services.html
@@ -169,11 +169,9 @@
 
                 <div class="card-one-details" id="card-one">
                     <h3 class="title">Etudes statistiques et socioéconomiques</h3>
-                    <p class="lh-sm">This is a long paragraph written to show how the line-height of an element is
-                        affected
-                        by our utilities. Classes are applied to the element itself or sometimes the parent element.
-                        These
-                        classes can be customized as needed with our utility API.</p>
+                    <p class="lh-sm">Accompagnement des organisations à la conception des notes méthodologiques de
+mise en œuvre des opérations de collecte et de gestion des données ainsi que les outils
+de collecte associés.</p>
                     <h5>Appui à la réalisation des études statistiques</h5>
                     <ul>
                         <li class="lh-sm">
