--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="header">
         <div class="top-bar">
-            <span>Welcome to TDR Consultation services</span>
+            <span>TDR Consultation services</span>
             <div class="dropdown">
                 <select class="form-select d-inline-block w-auto" aria-label="Language select">
                     <option selected>English</option>
@@ -45,7 +45,7 @@
                             <a class="nav-link" href="apropos.html">A Propos De Nous</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#services">Services</a>
+                            <a class="nav-link" href="#services"> Nos services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Blog</a>
