--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="header">
         <div class="top-bar">
-            <span>TDR Consultation services</span>
+            <span>TDR Consultating Sarl</span>
             <div class="dropdown">
                 <select class="form-select d-inline-block w-auto" aria-label="Language select">
                     <option selected>English</option>
@@ -48,7 +48,7 @@
                             <a class="nav-link" href="#services"> Nos services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link" href="#">Actualite</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#footer">Contactez-Nous</a>
@@ -69,10 +69,7 @@
                     exercitationem
                 </p>
             </div>
-            <div class="button">
-                <a href="services.html" class="btn1">Our Services</a>
-                <a href="apropos.html" class="btn2 btn-primary">Our Company</a>
-            </div>
+           
         </div>
     </section>
 
